[package]
name = "ferret_image_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.29", features = ["derive"] }
dialoguer = "0.10.2"
ferret_image = { path = "../ferret_image" }
image = "0.24.5"
reqwest = { version = "0.11.13", features = ["blocking"] }
seek_bufread = "1.2.2"
serde_json = "1.0.91"
strum = { version = "0.24", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4"] }
